[package]
name = "http-proxy-ipv6-pool"
version = "0.1.0"
edition = "2021"
authors = ["zu1k <i@lgf.im>"]
description = "Http proxy, every request from a separate IPv6 address."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/zu1k/http-proxy-ipv6-pool"
repository = "https://github.com/zu1k/http-proxy-ipv6-pool"
build = "build.rs"


[dependencies]
cidr = "0.2"
getopts = "0.2"
hyper = { version = "0.14", features = ["client", "server", "http1", "runtime"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
lazy_static = "1.4.0"
tokio-socks = "0.5.2"
socks = "0.3"
base64 = "0.22.1"
tokio-rustls = "0.26.0"
webpki-roots = "0.26.6"
tokio-native-tls = "0.3.1"
native-tls = "0.2.12"
httparse = "1.9.4"
libc = "0.2"
scopeguard = "1.2.0"
regex = "1"



[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1

[target.x86_64-apple-darwin]
rustflags = [
    "-C", "link-arg=-static",
]
[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-static",
]